check_PROGRAMS = testapp
TESTS = $(check_PROGRAMS)

testapp_SOURCES = ../aftimer.h ../atomic_set_map.h \
	../beregex.cpp ../beregex.h \
	../bulk_extractor_i.h \
	../cppmutex.h \
	../feature_recorder.cpp ../feature_recorder.h \
	../feature_recorder_set.cpp ../feature_recorder_set.h \
	../feature_recorder_sql.cpp \
	../histogram.cpp ../histogram.h \
	../net_ethernet.h \
	../pcap_fake.cpp ../pcap_fake.h \
	../plugin.cpp \
	../sbuf.cpp ../sbuf.h ../sbuf_private.h ../sbuf_stream.cpp ../sbuf_stream.h \
	../unicode_escape.cpp ../unicode_escape.h ../utf8.h ../utils.cpp ../utils.h \
	../word_and_context_list.cpp ../word_and_context_list.h \
	../testapp.cpp


